# LocalCloud

./: .env.example  .env.example.medium  .env.example.small  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  seed_admin.py
backend/api/: __init__.py  dependencies.py  router.py
backend/app/: dependencies.py  exception_handlers.py  lifecycle.py  main.py  middleware.py
backend/core/: __init__.py  config.py  constants.py  logging.py  preview_mime.py  rate_limit.py  secret_validation.py
backend/database/: __init__.py  client.py  exceptions.py  health.py  metadata.py  transactions.py  unit_of_work.py
backend/migrations/: env.py  script.py.mako
backend/schemas/: __init__.py  audit.py  auth.py  common.py  config.py  files.py  folders.py  health.py  nodes.py  permissions.py  public_links.py  quotas.py  registration.py  roles.py  tasks.py  trash.py  uploads.py  users.py
backend/security/: __init__.py
backend/services/: __init__.py  access.py  audit.py  auth.py  downloads.py  exceptions.py  files.py  folders.py  health.py  nodes.py  permissions.py  public_links.py  quotas.py  registration.py  tasks.py  trash.py  uploads.py  users.py
backend/storage/: __init__.py  buckets.py  capacity.py  client.py  exceptions.py  health.py  integrity.py  keys.py  metadata.py  multipart.py  objects.py  presigned.py  service.py  types.py
backend/tests/: __init__.py  conftest.py
backend/workers/: __init__.py  app.py  archives.py  cleanup.py  context.py  dispatcher.py  tasks.py  (+11 more)
(+616 files in other folders)
