[project]
name = "LocalCloud"
version = "0.1.1"
description = "Веб-приложение для персонального хранения файлов"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-jose[cryptography]>=3.5.0",
    "passlib[argon2,bcrypt]>=1.7.4",
    "sqlalchemy[asyncio]>=2.0.49",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.48.0",
    "pydantic[email]>=2.13.4",
    "bcrypt>=3.2.0,<4.0.0",
    "requests>=2.34.2",
    "fastapi>=0.125.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "pillow>=12.2.0",
    "pymupdf>=1.24.0",
    "minio>=7.2.20",
    "ruff",
    "ty",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
